@@ -23,8 +23,8 @@ DIST gitlab-ce-9.0.0_rc4.tar.gz 26270878 SHA256 f47ddcf6f4f0336228dd1ef03085c9ea
 EBUILD gitlab-ce-8.15.8.ebuild 11982 SHA256 755bfd6fa532a308d3f458db1456f8de4f2c5f599ab76c18653aad9e038d0697 SHA512 9aa439da7dc61687f1cdce5ff693dd1c8c4edc54aaed288ad0368aa1b64d577a7f3752dee149c200c4d98b43a6347c77251cac9f6d3316b5a6d799a17c3ed583 WHIRLPOOL 02393bfd983341632663096e8b293e3611ac5328a58a50a1c7e800e348e866f37aff53ebe447507a84d5966e019265fde94a30716f43b50228437e04abcd932c
 EBUILD gitlab-ce-8.16.8.ebuild 11982 SHA256 31537d4a6aeb9ff14ab14c9a27dca51a056e94ee75506ad855a1289f32468694 SHA512 01d536fcfb53a7b39943314a34eeeb9c5b5660604a2fb1a1c2dcd1d7e87d19ab0bbc5bc650feaa1db812047c3783a324d7c8a8bce7dd7381033c3d1ca2e64828 WHIRLPOOL 0f3402e30164ee6d5058c51554cc916d91d5975f438074e3193bf3bdb4e323bca4279c19f00cd7bacd01c2eb6cf13e41a0badabd958e9be58d319224f53403b0
 EBUILD gitlab-ce-8.17.4.ebuild 12928 SHA256 f748d42058293ba4f593fbb36be34ecde332d896d04c610fd3b7e91288c18fbb SHA512 3c2736f9b7df066bb105faffef6ce2b6276fe60a686a7462c630a1b7c7c0296d94e33c7ea25a9f24aa814628f318e2430a3e5ca149783c86ef3fb1132dd01877 WHIRLPOOL cd629ba993df3eaef9c9ec1bf1649aa4cfea5f3787d2207a7016c092bff67175d79c6782d643d4c80b3b5971a98858feaa279a184abc4fd936c7e5c8b291dd28
-EBUILD gitlab-ce-9.0.0.ebuild 12928 SHA256 55c3b39745547beac38b04d52b1c41caf2965179fa6d23cb0856f886fbe20431 SHA512 1557d9be66a033e1a9e94eb657342035f47f044cc4defd7eff35701554e47372794de5d7e1d1a94aa7ba7355990845ef8ac779aa449f06276ef52cafc9294d55 WHIRLPOOL e665021ba141205db52a8cf4be5a7f38c897967393a6f122fcbe93789008a991bfd2e6ced57873315434183898f21a5f13dc44a662e5cea309fd2f710895235b
+EBUILD gitlab-ce-9.0.0.ebuild 12933 SHA256 3c0c771e6ece33f3a47f58ebedfaff6b95f603b55916f4424db8617ba0f3774d SHA512 7ba12701c1b3b5e278912e3442024deed208e74bf87e5d49a497404c56bc13a3c5aa0848d9cdba14d8d6393808c9eac7b3b6bd56a564702130e86a7b69e14d7d WHIRLPOOL 169964b11c6e0473276422ff85557669f383506edaa55a8713f35b0bef588b60aae4eac30c1e36313c5b37681f48184b013ff9e647f603b0d8f46475b28091cb
 EBUILD gitlab-ce-9.0.0_rc4.ebuild 12910 SHA256 8851160b4454845fb33ce0b9a9dd3e070bed07d3a0e5c5f753c77b0ef301ded0 SHA512 9d109a3ea8fa7a7bb33440b4b21bf988745c4eefb62b834ad88825f3ffa28881eceaf402ec09241b74d91e778258c1a18daae6c86254625af4f54bf6189b32f2 WHIRLPOOL 67aa480b4cf1209a3d7af3bffb1f7f774bf2c6d18bf40960478e13459813ebb9472adc5aec3b84252157b0c3e74f9e7f74cb0d57395983c02ba4c976ffae106f
-EBUILD gitlab-ce-9999.ebuild 12869 SHA256 4a1e486e7386aa942bbd22c29457850584dab007b64715fc6f316ce5c98fcaf8 SHA512 ed66b809ca6e04956a9d4f5ef027aa9e174bad5cd80131a30fc34a1011f0221483b6fb52e893394b429d70919fc65496711a9c700c630c2ff31665827912df82 WHIRLPOOL b1b2582dcb1f600f199216c1bb532eac524ff3cce594e052039be29547164557997c65573f943c00240ab0986b0f1c1315602c3a65a0986e9f64a2df1827288e
-MISC ChangeLog 16217 SHA256 0c9f7b191006123750250bbaa1ee8eed779e4074051fb4b5b29de3cb0c2ef5d2 SHA512 cd1b669ed6bb3c3cd6f44343481d09c2ad4d8df5ab0217676ff49408a46e3b20ff746af78dc647c374c4d5d88f876c2eceb7444f83269fa027a6c40ec7698c9d WHIRLPOOL 94c4744827a3dba8175139cd1d9566ed264619be9f601208b4dec39cf8f2f33a4bd36507263eac7efb2a454cd197bc7ee801090b5cdd423a4aaecf3ee0443579
+EBUILD gitlab-ce-9999.ebuild 12874 SHA256 2c84abbccdfdbb2106d74acfca95509cd667e44b3d55a8058e5e12faff14ff8e SHA512 bfa9273ff0aabddb67d0739915c76bd133c2a08f1f24526f6f5de4ab59cca270e91e30a749fb6593b0604c9e4361639245216315a90ae4801b9aca66ef8f9cda WHIRLPOOL 09f779717a401f4e36d38de2cfd07e6228167fcb69ece26803ed3917e64a70502027d0b7ac3997bea9cfffb4e5bee24381e24cf257f3ad8521d5e0f611324fec
+MISC ChangeLog 16393 SHA256 c4a26554577cdca8b797319976c07964948f130c8f00fd8fb449053091fe11ea SHA512 8164411d5e4ce7f9a5189baf6d54875b444434d3ff7e5e4d780d94542fe9226a4e869a4b9a031d7f546c9b11bb5d7113e95fffc9b12065c222cd4946407bbb1b WHIRLPOOL 816884945be28eaec22d944b514d96c0f0653f6f607cbe3d2c71b2be1b11852c2c68e9f25742ced0ea1f7d49a06eb0bb5302b3c8763b26f65edb85d56ebb0c04
 MISC metadata.xml 665 SHA256 2a0cd67ad42f0cc6d8b88391cf6e3153a9883dab31aae8227c57c95f3f68890d SHA512 64b8fbae373d0a057f705f64c1d097dbfab893bd585e1db65ccdb06cda9569211c9b63fa168ac8de9f6d512a17759ecd20b54d818d2790a6f4c99d0ca73fddc3 WHIRLPOOL a81b21bb46aad9757a502628033eba546c686b83bbf1d651ecabba273c454cfb64574affc180db8358ced87eb638e8ad13d7c79c4cfb9a31e72c577d21ab433e
