@@ -339,7 +339,7 @@ pkg_config() {
 		exec_rake migrate_iids
 
 		einfo "Installing npm modules ..."
-		exec_npm install
+		exec_yarn install
 
 		einfo "Cleaning old precompiled assets ..."
 		exec_rake gitlab:assets:clean
@@ -360,7 +360,7 @@ pkg_config() {
 		exec_rake gitlab:setup
 
 		einfo "Installing npm modules ..."
-		exec_npm install
+		exec_yarn install
 	fi
 
 	einfo "Precompiling assests ..."
@@ -408,13 +408,13 @@ exec_rake() {
 		|| die "failed to run rake $@"
 }
 
-exec_npm() {
-	local command="npm $@ --${RAILS_ENV}"
+exec_yarn() {
+	local command="yarn $@ --${RAILS_ENV}"
 
 	echo "   ${command}"
 	su -l ${MY_USER} -c "
 		export LANG=en_US.UTF-8; export LC_ALL=en_US.UTF-8; export NODE_PATH=${DEST_DIR}/node_modules
 		cd ${DEST_DIR}
 		${command}" \
-		|| die "failed to run npm $@"
+		|| die "failed to run yarn $@"
 }
