@@ -1,3 +1,7 @@
+  28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0.ebuild,
+  gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  Fixed the latest ebuild to use yarn instead of npm.
+
 *gitlab-ce-9.0.0 (28 Mar 2017)
 
   28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.0.ebuild:
